# rusty-barn

./: .env  .gitignore  Cargo.toml  README.md  devenv.nix  package-lock.json
src/: config.rs  main.rs
src/http/: about.rs  error.rs  image_proc.rs  mod.rs
src/public/: package-lock.json  package.json  postcss.config.cjs  vite.config.js
src/public/src/: main.ts  react-modal.tsx  style.css
src/public/templates/: gallery.html  index.html  post.html
src/public/templates/parts/: head.html
